Fixed the test traverseAddEventsInNode